--- a/conf/config.json
+++ b/conf/config.json
@@ -1,9 +1,9 @@
 {
   "databaseCfg": {
     "port": 3306,
-    "host": "127.0.0.1",
+    "host": "8.218.213.49",
     "username": "root",
-    "password": "123456",
+    "password": "KbjpA97bs60ylfEa",
     "databaseName": "device"
   },
   "redisCfg": {
