feat:增加请求头

--- a/conf/config.json
+++ b/conf/config.json
@@ -17,6 +17,8 @@
   "ServerCfg": {
     "port": 8090,
     "tcpPort": 7090,
-    "heartbeatTime": 120000000000
+    "heartbeatTime": 120000000000,
+    "algorithm":"",
+    "key":"admin"
   }
 }
