--- a/conf/config.json
+++ b/conf/config.json
@@ -19,6 +19,6 @@
     "tcpPort": 7090,
     "heartbeatTime": 120000000000,
     "algorithm":"",
-    "key":"admin"
+    "key":"V2HTkjYP44G4kyET"
   }
 }
