feat:增加用户登陆如果没有分组新增分组和取消代理功能

--- a/conf/config.json
+++ b/conf/config.json
@@ -19,6 +19,7 @@
     "tcpPort": 7090,
     "heartbeatTime": 120000000000,
     "algorithm":"",
-    "key":"V2HTkjYP44G4kyET"
+    "key":"V2HTkjYP44G4kyET",
+    "systemGroupId": 1
   }
 }
